rejiggering of spacing and DOM

--- a/app/styles/stylesheet.css
+++ b/app/styles/stylesheet.css
@@ -267,7 +267,6 @@ Full-Width Styles
 .inner {
   position: relative;
   max-width: 640px;
-  padding: 20px 10px;
   margin: 0 auto;
 }
 
@@ -282,6 +281,10 @@ Full-Width Styles
 
 #header_wrap .inner {
   padding: 20px 10px 10px 10px;
+}
+
+.card {
+  padding: 0px 20px 0px 0px;
 }
 
 #project_title {
