add width and height to thumbnail tags. TODO: reuse this template code!

--- a/app/templates/year.html
+++ b/app/templates/year.html
@@ -3,7 +3,7 @@
 <div>{{yearSightings.length}} sightings, {{yearSpecies.length}} species</div>
 
 {{#each photos}}
-  <span><a href="{{this.photoURL}}"><img src="{{this.thumbURL}}"></a></span>
+  <span><a href="{{this.photoURL}}"><img width="100px" height="100px" src="{{this.thumbURL}}"></a></span>
 {{/each}}
 
 <div class="biglist">
