--- a/app/templates/taxon.html
+++ b/app/templates/taxon.html
@@ -1,7 +1,7 @@
 <h3>{{name}} <span style='font-weight: lighter'>| {{scientificName}}</span></h3>
 
 {{#each photos}}
-  <span><a href="{{this.photoURL}}"><img src="{{this.thumbURL}}"></a></span>
+  <span><a href="{{this.photoURL}}"><img width="100px" height="100px" src="{{this.thumbURL}}"></a></span>
 {{/each}}
 
 <div id={{chartID}} style='padding-top: 10px'></div>
