--- a/app/templates/trip.html
+++ b/app/templates/trip.html
@@ -5,7 +5,7 @@
 {{/each}}
 
 {{#each photos}}
-  <span><a href="{{this.photoURL}}"><img src="{{this.thumbURL}}"></a></span>
+  <span><a href="{{this.photoURL}}"><img width="100px" height="100px" src="{{this.thumbURL}}"></a></span>
 {{/each}}
 
 <div>
