--- a/app/templates/county.html
+++ b/app/templates/county.html
@@ -1,7 +1,7 @@
-<h3>{{name}} <span style='font-weight: lighter'>| {{state}}<span></h3>
+<h3>{{name}} <span style='font-weight: lighter'>| {{state}}</span></h3>
 
 {{#each photos}}
-  <span><a href="{{this.photoURL}}"><img src="{{this.thumbURL}}"></a></span>
+  <span><a href="{{this.photoURL}}"><img width="100px" height="100px" src="{{this.thumbURL}}"></a></span>
 {{/each}}
 </div>
 
