--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -8,9 +8,10 @@
 
 #loading {
 	position: absolute;
-	top: 20px;
 	text-align: center;
-	width: 100px;
+	top: 1px;
+	left: 1px;
+	width: 100%;
 	z-index: 1;
 	font-size: 96pt;
 }
