format numbers properly

--- a/app/templates/taxon.html
+++ b/app/templates/taxon.html
@@ -8,7 +8,7 @@
 
 {{monthgraph sightingsByMonth chartID}}
 
-<h4>{{sightings.length}} sightings</h4>
+<h4>{{nicenumber sightings.length}} sightings</h4>
 
 <div class="biglist">
 {{#each sightings}}
