add index to photographs add source maps add better debugging for when renderTemplate can't find the right div

--- a/app/templates/debug.html
+++ b/app/templates/debug.html
@@ -24,7 +24,14 @@
 <pre>
 [
 {{#each photos}}
-  { "location": "{{this.location}}", "tripDate": "{{this.tripDate}}", "thumbURL": "{{thumbURL}}" }
+{
+  	"location": "{{this.location}}",
+  	"tripDate": "{{this.tripDate}}",
+  	"scientificName": "{{scientificName}}",
+  	"commonName": "{{commonName}}",
+  	"thumbURL": "{{thumbURL}}",
+  	"photoURL": "{{photoURL}}"
+}
 {{/each}}
 ]
 </pre>
