add to debug page a list of photos whose scientific names are missing from ebird data, these would be photos for which there is no ebird sighting for that species or for which the scientific name has changed (mostly due to lumping or splitting)

--- a/app/templates/debug.html
+++ b/app/templates/debug.html
@@ -13,6 +13,13 @@
   <div> <img height='32px' src="{{this.thumbURL}}"> {{this.location}} <a href="#trip/{{this.tripDate}}">{{this.date}}</a> {{this.scientificName}}</div>
 {{/each}}
 
+<h4>These {{photosBadScientificName.length}} photos have scientific names missing from your eBird sightings:</h4>
+
+{{#each photosBadScientificName}}
+  <div> <img height='32px' src="{{this.thumbURL}}"> {{this.location}} <a href="#trip/{{this.tripDate}}">{{this.date}}</a> {{this.scientificName}}</div>
+{{/each}}
+
+
 <h4>Sighting has slashes:</h4>
 
 {{#each brokenLocations}}
