tweak template headings

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -5,9 +5,13 @@
 from {{nicedate earliest}} - {{nicedate latest}}
 </div>
 
+<h4>Sightings by Year</h4>
+
 <div id={{yearChartID}} style='padding-top: 10px'></div>
 
 {{bargraph sightingsByYear yearChartID}}
+
+<h4>Sightings by Month</h4>
 
 <div id={{monthChartID}} style='padding-top: 10px'></div>
 
