new format for photo.json includes sensible information, somebody other than me might use it. fix templates and other code to accomodate the new format

--- a/app/templates/photos.html
+++ b/app/templates/photos.html
@@ -1,7 +1,7 @@
-<h3>{{nicenumber photos.length}} photos of {{nicenumber photoScientificNames.length}} species</h3>
+<h3>{{nicenumber photos.length}} photos of {{nicenumber photoCommonNames.length}} species</h3>
 
 <div class="biglist">
-{{#each photoScientificNames}}
+{{#each photoCommonNames}}
 <div><a href="#taxon/{{this}}">{{this}}</a></div>
 {{/each}}
 </div>
