--- a/app/templates/debug.html
+++ b/app/templates/debug.html
@@ -4,19 +4,19 @@
 <h4>Please add an eBird checklist for these {{photosMissingTrip.length}} photos:</h4>
 
 {{#each photosMissingTrip}}
-  <div> <img height='32px' src="{{this.thumbURL}}"> {{this.location}} {{this.date}} {{this.scientificName}}</div>
+  <div> <img height='32px' src="{{[Thumbnail URL]}}"> {{this.Location}} {{this.Date}} {{[Common Name]}} / {{[Scientific Name]}}</div>
 {{/each}}
 
 <h4>These {{photosMissingLocation.length}} photos have locations missing from your eBird data:</h4>
 
 {{#each photosMissingLocation}}
-  <div> <img height='32px' src="{{this.thumbURL}}"> {{this.location}} <a href="#trip/{{this.tripDate}}">{{this.date}}</a> {{this.scientificName}}</div>
+  <div> <img height='32px' src="{{[Thumbnail URL]}}"> {{this.Location}} {{this.Date}} {{[Common Name]}} / {{[Scientific Name]}}</div>
 {{/each}}
 
 <h4>These {{photosBadScientificName.length}} photos have scientific names missing from your eBird sightings:</h4>
 
 {{#each photosBadScientificName}}
-  <div> <img height='32px' src="{{this.thumbURL}}"> {{this.location}} <a href="#trip/{{this.tripDate}}">{{this.date}}</a> {{this.scientificName}}</div>
+  <div> <img height='32px' src="{{[Thumbnail URL]}}"> {{this.Location}} <a href="#trip/{{Date}}">{{this.Date}}</a> {{[Common Name]}} / {{[Scientific Name]}}</div>
 {{/each}}
 
 <h4>There are no sightings for these custom day names:</h4>
@@ -30,20 +30,3 @@
 {{#each brokenLocations}}
   <div>{{this}}</div>
 {{/each}}
-
-<h4>Here is a copy of your clean photos.json</h4>
-
-<pre>
-[
-{{#each photos}}
-{
-  	"Location": "{{this.location}}",
-  	"Date": "{{this.tripDate}}",
-  	"Scientific Name": "{{scientificName}}",
-  	"Common Name": "{{commonName}}",
-  	"Thumbnail URL": "{{thumbURL}}",
-  	"Photo URL": "{{photoURL}}"
-}
-{{/each}}
-]
-</pre>
