--- a/app/templates/location.html
+++ b/app/templates/location.html
@@ -3,7 +3,7 @@
 
 <div>
 {{#each photos}}
-  <span><a href="{{this.photoURL}}"><img width="85px" height="85px" src="{{this.thumbURL}}"></a></span>
+  <span><a href="{{[Photo URL]}}"><img width="85px" height="85px" src="{{[Thumbnail URL]}}"></a></span>
 {{/each}}
 </div>
 
