--- a/app/templates/trip.html
+++ b/app/templates/trip.html
@@ -5,7 +5,7 @@
 {{/each}}
 
 {{#each photos}}
-  <span><a href="{{this.photoURL}}"><img width="85px" height="85px" src="{{this.thumbURL}}"></a></span>
+  <span><a href="{{[Photo URL]}}"><img width="85px" height="85px" src="{{[Thumbnail URL]}}"></a></span>
 {{/each}}
 
 <div>
