when reading up photos.json, add an ID slot based on index into gPhotos use that to create a photos detail page link to that page from all the places where we show thumbnails

--- a/app/templates/county.html
+++ b/app/templates/county.html
@@ -1,7 +1,7 @@
 <h3>{{name}} <span style='font-weight: lighter'>| {{state}}</span></h3>
 
 {{#each photos}}
-  <span><a href="{{[Photo URL]}}"><img width="85px" height="85px" src="{{[Thumbnail URL]}}"></a></span>
+  <span><a href="#photo/{{id}}"><img width="85px" height="85px" src="{{[Thumbnail URL]}}"></a></span>
 {{/each}}
 </div>
 
