--- a/app/templates/taxon.html
+++ b/app/templates/taxon.html
@@ -1,7 +1,7 @@
 <h3>{{name}} <span style='font-weight: lighter'>| {{scientificName}}</span></h3>
 
 {{#each photos}}
-  <span><a href="{{[Photo URL]}}"><img width="85px" height="85px" src="{{[Thumbnail URL]}}"></a></span>
+  <span><a href="#photo/{{id}}"><img width="85px" height="85px" src="{{[Thumbnail URL]}}"></a></span>
 {{/each}}
 
 <h4>{{nicenumber sightings.length}} sightings</h4>
