--- a/app/templates/year.html
+++ b/app/templates/year.html
@@ -3,7 +3,7 @@
 <div>{{nicenumber yearSightings.length}} sightings, {{nicenumber yearSpecies.length}} species, {{nicenumber photos.length}} photos</div>
 
 {{#each photos}}
-  <span><a href="{{[Photo URL]}}"><img width="85px" height="85px" src="{{[Thumbnail URL]}}"></a></span>
+  <span><a href="#photo/{{id}}"><img width="85px" height="85px" src="{{[Thumbnail URL]}}"></a></span>
 {{/each}}
 
 <div class="biglist">
