add photos to menu bar replace duplicate thumbnails loop with Handlebars partial

--- a/app/templates/county.html
+++ b/app/templates/county.html
@@ -1,9 +1,6 @@
 <h3>{{name}} <span style='font-weight: lighter'>| {{state}}</span></h3>
 
-{{#each photos}}
-  <span><a href="#photo/{{id}}"><img width="85px" height="85px" src="{{[Thumbnail URL]}}"></a></span>
-{{/each}}
-</div>
+{{> thumbnails}}
 
 <div id={{chartID}} style='padding-top: 10px'></div>
 
