--- a/app/templates/trip.html
+++ b/app/templates/trip.html
@@ -8,11 +8,7 @@
   <span><a href="#photo/{{id}}"><img width="85px" height="85px" src="{{[Thumbnail URL]}}"></a></span>
 {{/each}}
 
-<div>
-{{#each sightingList.checklists}}
-  <span><a target='_blank' href='http://ebird.org/ebird/view/checklist?subID={{this}}'>{{this}}</a></span>
-{{/each}}
-</div>
+{{> thumbnails}}
 
 <h4>
   {{taxons.length}} species at
