add helper to call encodeURIcomponent for taxon and location names containing slashes

--- a/app/templates/taxon.html
+++ b/app/templates/taxon.html
@@ -12,7 +12,7 @@
 	{{#each sightings}}
 	  <div>
 	    <a href="#trip/{{this.Date}}">{{nicedate this.DateObject}}</a>
-	    <a href="#location/{{this.Location}}">{{this.Location}}</a>
+	    <a href="#location/{{encode this.Location}}">{{this.Location}}</a>
 	  </div>
 	{{/each}}
 	</div>
