--- a/app/templates/county.html
+++ b/app/templates/county.html
@@ -10,7 +10,7 @@
 
 <div class="biglist">
   {{#each sightingList.locations}}
-    <div><a href="#location/{{this}}">{{this}}</a></div>
+    <div><a href="#location/{{encode this}}">{{this}}</a></div>
   {{/each}}
 </div>
 
@@ -19,7 +19,7 @@
 <div class="biglist">
 {{#each taxons}}
   <div>
-    <a href="#taxon/{{this}}">{{this}}</a>
+    <a href="#taxon/{{encode this}}">{{this}}</a>
   </div>
 {{/each}}
 </div>
