--- a/app/templates/location.html
+++ b/app/templates/location.html
@@ -8,7 +8,7 @@
 <div class="biglist">
 {{#each taxons}}
   <div>
-    <a href="#taxon/{{this}}">{{this}}</a>
+    <a href="#taxon/{{encode this}}">{{this}}</a>
   </div>
 {{/each}}
 </div>
