--- a/app/templates/locations.html
+++ b/app/templates/locations.html
@@ -2,6 +2,6 @@
 
 <div class="biglist">
 {{#each locations}}
-<div><a href="#location/{{this}}">{{this}}</a></div>
+<div><a href="#location/{{encode this}}">{{this}}</a></div>
 {{/each}}
 </div>
