--- a/app/templates/year.html
+++ b/app/templates/year.html
@@ -6,6 +6,6 @@
 
 <div class="biglist">
 {{#each yearSpecies}}
-  <div><a href="#taxon/{{this}}">{{this}}</a></div>
+  <div><a href="#taxon/{{encode this}}">{{this}}</a></div>
 {{/each}}
 </div>
