--- a/app/templates/photo.html
+++ b/app/templates/photo.html
@@ -1,4 +1,4 @@
 <h3>{{[Common Name]}} <span style='font-weight: lighter'>| {{[Scientific Name]}}</span></h3>
-<div>{{[Location]}}, {{[Date]}}</div>
+<div>{{[Location]}}, {{nicedate DateObject}}</div>
 
 <img src="{{[Photo URL]}}">
