add links to xeno-canto (fixes issue #17) fix page title for photo pages

--- a/app/templates/taxon.html
+++ b/app/templates/taxon.html
@@ -1,5 +1,7 @@
 <h3>{{name}} <span style='font-weight: lighter'>| {{scientificName}}</span></h3>
 
+<div><a target="_blank" href="http://www.xeno-canto.org/species/{{spacetodash scientificName}}">xeno-canto sounds</a></div>
+
 {{> thumbnails}}
 
 <h4>{{nicenumber sightings.length}} sightings</h4>
