use nice template formatting

--- a/app/templates/chrono.html
+++ b/app/templates/chrono.html
@@ -1,4 +1,4 @@
-<h3>{{firstSightings.length}} species</h3>
+<h3>{{nicenumber firstSightings.length}} species</h3>
 
 {{#each firstSightings}}
 	<div>{{nicedate this.DateObject}} <a href="#taxon/{{[Common Name]}}">{{[Common Name]}}</a></div>
