partial fix that exposes the fact that we don't have locations for taxons here

--- a/app/templates/trip.html
+++ b/app/templates/trip.html
@@ -24,8 +24,8 @@
 <div class="biglist">
 {{#each taxons}}
   <div>
-    {{#if sightingList.multipleLocations}}
-    <a href='#location/{{encode this.Location}}'>{{this.Location}}</a>
+    {{#if ../sightingList.multipleLocations}}
+      <a href='#location/{{encode this.Location}}'>{{this.Location}}</a>
     {{/if}}
     <a href='#taxon/{{encode this}}'>{{this}}</a>
   </div>
