fix weirdness with encode helper

--- a/app/templates/taxons.html
+++ b/app/templates/taxons.html
@@ -2,6 +2,6 @@
 
 <div class="biglist">
 {{#each lifeSightings}}
-<div><a href="#taxon/{{[Common Name]}}">{{[Common Name]}}</a></div>
+<div><a href="#taxon/{{encode [Common Name]}}">{{[Common Name]}}</a></div>
 {{/each}}
 </div>
