--- a/app/templates/trip.html
+++ b/app/templates/trip.html
@@ -7,7 +7,7 @@
 {{> thumbnails}}
 
 <div>
-{{#each (values sightingList "Checklist")}}
+{{#each (values sightingList "Submission ID")}}
   <span><a target='_blank' href='http://ebird.org/ebird/view/checklist?subID={{this}}'>{{this}}</a></span>
 {{/each}}
 </div>
