--- a/app/templates/county.html
+++ b/app/templates/county.html
@@ -6,18 +6,18 @@
 
 {{monthgraph sightingsByMonth chartID}}
 
-<h4>{{sightingList.locations.length}} locations</h4>
+<h4>{{valuecount sightingList "Location"}} Locations</h4>
 
 <div class="biglist">
-  {{#each sightingList.locations}}
+  {{#each (values sightingList "Location")}}
     <div><a href="#location/{{encode this}}">{{this}}</a></div>
   {{/each}}
 </div>
 
-<h4>{{taxons.length}} species on {{sightingList.dateObjects.length}} dates</h4>
+<h4>{{valuecount sightingList "Common Name"}} Species on {{sightingList.dateObjects.length}} Dates</h4>
 
 <div class="biglist">
-{{#each taxons}}
+{{#each (values sightingList "Common Name")}}
   <div>
     <a href="#taxon/{{encode this}}">{{this}}</a>
   </div>
