add link to wikipedia move toward cacheing earliestByCommonName

--- a/app/templates/taxon.html
+++ b/app/templates/taxon.html
@@ -1,6 +1,9 @@
 <h3>{{name}} <span style='font-weight: lighter'>| {{scientificName}}</span></h3>
 
-<div><a target="_blank" href="http://www.xeno-canto.org/species/{{spacetodash scientificName}}">xeno-canto sounds</a></div>
+<div>
+	<a target="_blank" href="http://www.xeno-canto.org/species/{{spacetodash scientificName}}">xeno-canto</a> |
+	<a target="_blank" href="http://en.wikipedia.org/wiki/{{spacetounder name}}">wikipedia</a>
+</div>
 
 {{> thumbnails}}
 
