add global id's to sightings link to sightings from (single location) trips to facilitate adding photos only show counts if they are numbers (fixes issue #37)

--- a/app/templates/trip.html
+++ b/app/templates/trip.html
@@ -30,10 +30,13 @@
       </div>
     {{/each}}
   {{else}}
-    SINGLE
     {{#each sightingList.rows}}
       <div>
-        <a href='#taxon/{{encode [Common Name]}}'>{{[Common Name]}}</a> {{Count}}
+        <a href='#taxon/{{encode [Common Name]}}'>{{[Common Name]}}</a>
+        {{#if (isnumber Count)}}
+          {{Count}}
+        {{/if}}
+        <a href="#sighting/{{this.id}}">+</a>
       </div>
     {{/each}}
   {{/if}}
