trying to get a nice multi-column layout

--- a/app/templates/trips.html
+++ b/app/templates/trips.html
@@ -2,6 +2,6 @@
 
 <div class="biglist">
 {{#each trips}}
-<div><a href="#trip/{{ebirddate this}}">{{nicedate this}}</a> {{lookup ../customDayNames (ebirddate this)}}</div>
+<div style='white-space: nowrap'><a href="#trip/{{ebirddate this}}">{{nicedate this}}</a> {{lookup ../customDayNames (ebirddate this)}}</div>
 {{/each}}
 </div>
