--- a/app/templates/county.html
+++ b/app/templates/county.html
@@ -10,7 +10,7 @@
 
 <div class="biglist">
   {{#each (values sightingList "Location")}}
-    <div><a href="#location/{{encode this}}">{{this}}</a></div>
+    <div class='biglist-item'><a href="#location/{{encode this}}">{{this}}</a></div>
   {{/each}}
 </div>
 
@@ -18,7 +18,7 @@
 
 <div class="biglist">
 {{#each (values sightingList "Common Name")}}
-  <div>
+  <div class='biglist-item'>
     <a href="#taxon/{{encode this}}">{{this}}</a>
   </div>
 {{/each}}
