--- a/app/templates/locations.html
+++ b/app/templates/locations.html
@@ -6,7 +6,7 @@
 		{{#each this}}
 			<h3><a href="#county/{{encode @key}}">{{@key}}</a> County</h3>
 			{{#each this}}
-				<div><a href="#location/{{encode this}}">{{this}}</a></div>
+				<div class='biglist-item'><a href="#location/{{encode this}}">{{this}}</a></div>
 			{{/each}}
 		{{/each}}
 	{{/each}}
