make sure to use "County" consistently

--- a/app/templates/location.html
+++ b/app/templates/location.html
@@ -1,5 +1,6 @@
 <h3>
-	{{sightingList.rows.0.Location}}<span style='font-weight: lighter'>| <a href="#county/{{sightingList.rows.0.County}}">{{sightingList.rows.0.County}}</a>, {{sightingList.rows.0.[State/Province]}}</span></h3>
+	{{sightingList.rows.0.Location}}<span style='font-weight: lighter'>| <a href="#county/{{sightingList.rows.0.County}}">{{sightingList.rows.0.County}} County</a>, {{sightingList.rows.0.[State/Province]}}</span>
+</h3>
 
 <div>
 	<a target="_blank" href="https://www.openstreetmap.org/?mlat={{sightingList.rows.0.Latitude}}&mlon={{sightingList.rows.0.Longitude}}#map=10/{{sightingList.rows.0.Latitude}}/{{sightingList.rows.0.Longitude}}">
