--- a/app/templates/locations.html
+++ b/app/templates/locations.html
@@ -4,7 +4,7 @@
 	{{#each hierarchy}}
 		<h2>{{@key}}</h2>
 		{{#each this}}
-			<h3><a href="#county/{{encode @key}}">{{@key}}</a> County</h3>
+			<h3><a href="#county/{{encode @key}}">{{@key}} County</a></h3>
 			{{#each this}}
 				<div class='biglist-item'><a href="#location/{{encode this}}">{{this}}</a></div>
 			{{/each}}
