add photo of the week

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -5,6 +5,10 @@
 from {{nicedate earliest}} - {{nicedate latest}}
 </div>
 
+<h4>Photo Of The Week</h4>
+
+<img src="{{photoOfTheWeek.[Photo URL]}}">
+
 <h4>Sightings by Year</h4>
 
 <div id={{yearChartID}} style='padding-top: 10px'></div>
