--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,22 +1,12 @@
 <h3>{{owner}}&apos;s eBird</h3>
 
-<div>
-{{nicenumber numSightings}} sightings in {{nicenumber numChecklists}} checklists
-from {{nicedate earliest}} - {{nicedate latest}}
-</div>
-
 <h4>Photo Of The Week</h4>
 
 <img src="{{photoOfTheWeek.[Photo URL]}}">
 
-<h4>Sightings by Year</h4>
+<div>
+	<a href="#taxon/{{encode photoOfTheWeek.[Common Name]}}">{{photoOfTheWeek.[Common Name]}}</a>,
+	<a href="#location/{{encode photoOfTheWeek.[Location]}}">{{photoOfTheWeek.[Location]}}</a>,
+	<a href="#trip/{{ebirddate photoOfTheWeek.[DateObject]}}">{{nicedate photoOfTheWeek.DateObject}}</a>
+</div>
 
-<div id={{yearChartID}} style='padding-top: 10px'></div>
-
-{{bargraph sightingsByYear yearChartID}}
-
-<h4>Sightings by Month</h4>
-
-<div id={{monthChartID}} style='padding-top: 10px'></div>
-
-{{monthgraph sightingsByMonth monthChartID}}
