add date objects to big days data structure, add nicely formatted dates to big day list

--- a/app/templates/bigdays.html
+++ b/app/templates/bigdays.html
@@ -3,9 +3,10 @@
 <div>
 	{{#each bigDays}}
 		<div>
-			<a href="#trip/{{this.date}}">{{this.date}}</a>:
 			{{this.count}} species,
-			{{lookup ../customDayNames this.date}}
+			<a href="#trip/{{this.date}}">
+				{{nicedate this.dateObject}}: {{lookup ../customDayNames this.date}}
+			</a>
 		</div>
 	{{/each}}
 </div>
