--- a/app/templates/taxons.html
+++ b/app/templates/taxons.html
@@ -1,7 +1,10 @@
 <h3>{{nicenumber lifeSightings.length}} species</h3>
 
 <div class="biglist">
-{{#each lifeSightings}}
-<div class='biglist-item'><a href="#taxon/{{encode [Common Name]}}">{{[Common Name]}}</a></div>
-{{/each}}
+	{{#each hierarchy}}
+		<h3>{{@key}}</h3>
+		{{#each this}}
+			<div class='biglist-item'><a href="#taxon/{{encode this}}">{{this}}</a></div>
+		{{/each}}
+	{{/each}}
 </div>
