fix species groupings

--- a/app/templates/taxons.html
+++ b/app/templates/taxons.html
@@ -1,4 +1,4 @@
-<h3>{{nicenumber lifeSightings.length}} species</h3>
+<h3>{{nicenumber lifeSightingsCount}} species</h3>
 
 <div class="biglist">
 	{{#each hierarchy}}
