fix URL to photos in sample JSON block

--- a/app/templates/sighting.html
+++ b/app/templates/sighting.html
@@ -12,7 +12,7 @@
     "Location": "{{this.Location}}",
     "Scientific Name": "{{[Scientific Name]}}",
     "Common Name": "{{[Common Name]}}",
-    "Thumbnail URL": "http://birdwalker.com/images/thumb/{{sortabledate this.DateObject}}-{{spacetodash [Scientific Name]}}-NNNNNN.jpg",
-    "Photo URL": "http://birdwalker.com/images/photo/{{sortabledate this.DateObject}}-{{spacetodash [Scientific Name]}}-NNNNNN.jpg"
+    "Thumbnail URL": "https://dl.dropboxusercontent.com/u/171684/birdwalker/thumb/{{sortabledate this.DateObject}}-{{spacetodash [Scientific Name]}}-NNNNNN.jpg",
+    "Photo URL": "https://dl.dropboxusercontent.com/u/171684/birdwalker/photo/{{sortabledate this.DateObject}}-{{spacetodash [Scientific Name]}}-NNNNNN.jpg"
   }
 </pre>
