--- a/app/styles/stylesheet.css
+++ b/app/styles/stylesheet.css
@@ -50,8 +50,6 @@ Theme Styles
 
 body {
   box-sizing: border-box;
-  color:#373737;
-  background: #212121;
   font-size: 16px;
   font-family: 'Calibri', Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -312,9 +310,9 @@ Full-Width Styles
 }
 
 #main_content_wrap {
-  background: #f2f2f2;
-  border-top: 1px solid #111;
-  border-bottom: 1px solid #111;
+  background: #f8f8f8;
+  border-top: 1px solid #f3f3f3;
+  border-bottom: 1px solid #f3f3f3;
 }
 
 #main_content {
