--- a/app/styles/stylesheet.css
+++ b/app/styles/stylesheet.css
@@ -3,8 +3,6 @@ Slate Theme for GitHub Pages
 by Jason Costello, @jsncostello
 *******************************************************************************/
 
-@import url(github-light.css);
-
 /*******************************************************************************
 MeyerWeb Reset
 *******************************************************************************/
@@ -51,7 +49,7 @@ Theme Styles
 body {
   box-sizing: border-box;
   font-size: 16px;
-  font-family: 'Calibri', Helvetica, Arial, sans-serif;
+  font-family: 'Roboto', Helvetica, Arial, sans-serif;
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
 }
@@ -60,7 +58,7 @@ h1, h2, h3, h4, h5, h6 {
   margin: 10px 0;
   font-weight: 700;
   color:#222222;
-  font-family: 'Calibri', Helvetica, Arial, sans-serif;
+  font-family: 'Roboto', Helvetica, Arial, sans-serif;
   letter-spacing: -1px;
 }
 
@@ -277,12 +275,12 @@ Full-Width Styles
 }
 
 #header_wrap {
-  background: #212121;
-  background: -moz-linear-gradient(top, #373737, #212121);
-  background: -webkit-linear-gradient(top, #373737, #212121);
-  background: -ms-linear-gradient(top, #373737, #212121);
-  background: -o-linear-gradient(top, #373737, #212121);
-  background: linear-gradient(top, #373737, #212121);
+  background: #888;
+  background: -moz-linear-gradient(top, #999, #666);
+  background: -webkit-linear-gradient(top, #999, #666);
+  background: -ms-linear-gradient(top, #999, #666);
+  background: -o-linear-gradient(top, #999, #666);
+  background: linear-gradient(top, #999, #666);
 }
 
 #header_wrap .inner {
