--- a/app/styles/stylesheet.css
+++ b/app/styles/stylesheet.css
@@ -56,10 +56,8 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
   margin: 10px 0;
-  font-weight: 700;
   color:#222222;
-  font-family: 'Roboto', Helvetica, Arial, sans-serif;
-  letter-spacing: -1px;
+  font-family: 'Roboto Condensed', Helvetica, Arial, sans-serif;
 }
 
 h1 {
