use condensed font for menubar and remove 90% size use bigger line height just for lists make sure all index pages (photos, big days, locations, taxons) have the biglist-item style

--- a/app/templates/bigdays.html
+++ b/app/templates/bigdays.html
@@ -2,7 +2,7 @@
 
 <div>
 	{{#each bigDays}}
-		<div>
+		<div class='biglist-item'>
 			{{this.count}} species,
 			<a href="#trip/{{this.date}}">
 				{{nicedate this.dateObject}}: {{lookup ../customDayNames this.date}}
