--- a/app/templates/photos.html
+++ b/app/templates/photos.html
@@ -2,6 +2,6 @@
 
 <div class="biglist">
 {{#each photoCommonNames}}
-<div><a href="#taxon/{{encode this}}">{{this}}</a></div>
+	<div class='biglist-item'><a href="#taxon/{{encode this}}">{{this}}</a></div>
 {{/each}}
 </div>
