--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -17,10 +17,10 @@
 	white-space: nowrap;
 	overflow: hidden;
 	text-overflow: ellipsis;
+	line-height: 1.5;
 }
 
 .menubar a {
 	padding-right: 1em;
 	text-transform: capitalize;
-	font-size: 90%;
 }
