--- a/app/styles/stylesheet.css
+++ b/app/styles/stylesheet.css
@@ -41,7 +41,6 @@ body {
   box-sizing: border-box;
   font-size: 16px;
   font-family: 'Roboto', Helvetica, Arial, sans-serif;
-  line-height: 1.5;
   -webkit-font-smoothing: antialiased;
 }
 
@@ -152,6 +151,7 @@ Full-Width Styles
 }
 
 #header_wrap {
+  font-family: 'Roboto Condensed', Helvetica, Arial, sans-serif;
   background: #888;
   background: -moz-linear-gradient(top, #999, #666);
   background: -webkit-linear-gradient(top, #999, #666);
