--- a/app/templates/trip.html
+++ b/app/templates/trip.html
@@ -1,4 +1,4 @@
-<h3>{{nicedate tripDate}} <span style='font-weight: lighter'>| {{customName}}</span></h3>
+<h3>{{nicedate tripDate}} <span class='lighter'>{{customName}}</span></h3>
 
 {{#each comments}}
   <div style='font-style: italic'>{{this}}</div>
