--- a/app/templates/taxon.html
+++ b/app/templates/taxon.html
@@ -1,4 +1,4 @@
-<h3>{{name}} <span style='font-weight: lighter'>| {{scientificName}}</span></h3>
+<h3>{{name}} <span class='lighter'>{{scientificName}}</span></h3>
 
 <div>
 	<a target="_blank" href="http://www.xeno-canto.org/species/{{spacetodash scientificName}}">xeno-canto</a> |
