--- a/app/styles/stylesheet.css
+++ b/app/styles/stylesheet.css
@@ -112,7 +112,7 @@ a {
 
 a:hover, a:focus {text-decoration: underline;}
 
-img {
+.framed {
   position: relative;
   margin: 0 auto;
   max-width: 739px;
