--- a/app/templates/county.html
+++ b/app/templates/county.html
@@ -1,4 +1,4 @@
-<h3>{{name}} County<span class='lighter'>{{state}}</span></h3>
+<h3>{{name}} County <span class='lighter'>{{Region}}, {{Country}}</span></h3>
 
 {{> thumbnails}}
 
